Fixed <ol> not displaying correctly on Firefox.

--- a/website/src/pages/routes/routesPage.scss
+++ b/website/src/pages/routes/routesPage.scss
@@ -20,12 +20,11 @@
 
     li {
       padding: 1rem;
-      list-style-type: -moz-ethiopic-numeric;
     }
 
     li:hover {
       padding-left: 1.2rem;
-      -webkit-transition: all 0.1s ease-in-out;
+      transition: all 0.1s ease-in-out;
       font-weight: bold;
     }
 }
